moved sprint4 to 4sprint

--- a/4sprint/our_system.tex
+++ b/4sprint/our_system.tex
@@ -1,5 +1,7 @@
-\section{The Future of Our Tracking System}\label{sec:future_system}
-
+\section{The Future of Our Tracking System}\label{sec:futureSystem}
+As described in \cref{sec:ourSys} we have been working on building our own tracking system, we did however not finish this due to a number of difficulties. The main obstacle we encountered was not being able to get the RSSI, and thus not making it possible for us to further progress on our ow system.
 \subsection*{Signal Strength}
+The first step in future development should be to become able to get the RSSI from at least devises connected to the network.
 
 \subsection*{Problems}
+some other problems we have had
