--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -13,13 +13,13 @@ Doing this is a continuous process and will be continued throughout the entire p
 \subsection{Code Testing}
 Many of the aStep components communicate with each other by calling methods or sharing data. These dependencies introduce a requirement for correctness of code across the project. Consequently, unit tests are created to ensure functionality behaves according to the specification. The tests can be used to simulate the characteristics of the usage of the code and ensure that edge cases and unintended uses are handled properly. 
 
-Changes in an implemented component may have unforeseen obscure consequences on other components because of indirect dependencies. When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the project. This is ensured by use of a common GitLab server, such that whenever a change is pushed, the entire project is compiled and all the tests will be processed. The build will be marked as erroneous if the compilation or a test fails.
+Changes in an implemented component may have unforeseen obscure consequences on other components because of indirect dependencies. When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the project. This is ensured by use of a common GitLab server, such that whenever a change is pushed, the entire project is compiled and all the tests will be processed. The build will be marked as erroneous if the compilation or a test fails. This increase the robustness of the program, given that unit test have been written for the program.
 
 The code developed in this project will be further improved and expanded on by future students. Unit tests support the documentation and facilitates understanding of the code.
-By writing tests for the entire code, future developers may be able to start working on this project with more ease. 
+By writing tests for the essential parts of the code, future developers will have an easer time understand and developing the project as well as maintain it. 
 This report seeks to explain design decisions and what the purpose of the system is as a whole, whereas the usage of individual methods are documented with unit tests, and the functionality of the individual methods are documented with comments.
 
-The tests across the project have been made using the testing library JUnit\cite{junit4}.\ofx{Bis asks: "Why JUnit? any benefits of using this?} The system has been supplied with tests after the implementation of each class. Typically each method in a class is tested using the black-box method, where actual output is compared to the expected output on a predefined input.
+The tests across the project have been made using the testing library JUnit\cite{junit4}.\ofx{Bis asks: "Why JUnit? any benefits of using this?} The system has been supplied with tests after the implementation of each class. Each complex method in a class is tested using the black-box method, where actual output is compared to the expected output on a predefined input.
 
 \begin{lstlisting}[caption={Testing ContinuesPuller},label={lst:test_continuespuller},language=inc_Java, mathescape]
 @Test
