--- a/bib.bib
+++ b/bib.bib
@@ -366,3 +366,10 @@
 	note = {Accessed 6-5-2016},
 	url ={https://www.netbsd.org/docs/guide/en/chap-net-intro.html}
 }
+
+@MISC{log4j,
+    author = {THE APACHE SOFTWARE FOUNDATION},
+    title = {IntroductionApache Log4j 2},
+    note = {Accessed 10-5-2016},
+    url ={http://logging.apache.org/log4j/2.x/}
+}
