--- a/1sprint/permission.tex
+++ b/1sprint/permission.tex
@@ -1,14 +1,14 @@
 \section{Permission} \label{sec:permission}
-By using Cisco it is possible to acquire and store peoples unique Mac-address and use this to track them. It is illegal to do so without the individuals acceptance and it is as such necessary to accommodate this regulation when designing the system \cite{TrafficIlligal}.
-There have been several trials in Denmark as a consequence of this regulation. A Traffic system has recorded passerbys by registering the WI-FI signal emitted from their smart phones. This was done with sensors registering the unique Mac-address, which was then hashed and re-hashed in the sensors before being stored. Despite the attempt at obfuscating the users\cite{TrafficIlligal}, it is illegal according to the \textit{Directive on privacy and electronic communications} article 5(3)\cite{CookieDirective} which can be seen in the following quote,
+By using MSE it is possible to acquire and store peoples unique MAC address and use this to track them. It is illegal to do so without the individuals acceptance and it is as such necessary to accommodate this regulation when designing the system \cite{TrafficIlligal}.
+There have been several trials in Denmark as a consequence of this regulation. A Traffic system has recorded passerbys by registrating the WI-FI signal emitted from their smart phones. This was done with sensors registrating the unique MAC address, which was then hashed and re-hashed in the sensors before being stored. Despite the attempt at obfuscating the users\cite{TrafficIlligal}, it is illegal according to the \textit{Directive on privacy and electronic communications} article 5(3)\cite{CookieDirective} which can be seen in the following quote,
 
 \begin{quote}
 \textit{'Member States shall ensure that the use of electronic communications networks to store information or to gain access to information stored in the terminal equipment of a subscriber or user is only allowed on condition that the subscriber or user concerned is provided with clear and comprehensive information...'}
 \end{quote}
 
-However, the Danish Business Authority's conclusion was that the system did not fit in \textit{Directive on privacy and electronic communications} due to the end-user being unidentifiable\cite{TrafficOK} as described by article 3(1)\cite{CookieDirective}. No sanction was inflicted for this case, however, as a consequence the system is no longer in use.
+However, the Danish Business Authority's conclusion was that the system did not fit in \textit{Directive on privacy and electronic communications} due to the end user being unidentifiable\cite{TrafficOK} as described by article 3(1)\cite{CookieDirective}. No sanction was inflicted for this case, however, this illustrates the necessity to obfuscate personal sensitive information.
 
 %http://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=CELEX:31995L0046&from=da
-To ensure no such debates are raised in relation to this project, it will be necessary to differ between those who have given their permission to store person sensitive data and those who have not. By differentiating between the two it will be possible to obfuscate and remove personal data for individuals who has not given their acceptance.
+To ensure no such debates are raised in relation to this project, it will be necessary to differ between those who have given their permission to store person sensitive data and those who have not. By differentiating between the two it will be possible to obfuscate and remove personal data, such as MAC addresses, for individuals who has not given their acceptance.
 
 We will use the term person sensitive data when referring to data that can be used to identify a person. 
