--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -8,7 +8,7 @@ This chapter list the aspect of Cisco system and Indoor location based service w
 \end{itemize}
 
 
-\section{Data Flow from Cisco to the Database}
+\section{Data Flow from Cisco to the Database}\label{sec:data_flow}
 \begin{figure}[ht]
 	\begin{center}
 		\includegraphics[scale=0.7]{graphics/ciscoSmall.pdf}
