More intro to sprint 4

--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,5 +1,5 @@
 \chapter{Sprint 4}
-This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3, it includes hashing password and mac-addresses and enabling HTTPS on our server.
+This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3 and improved the overall code standard, it includes hashing password and mac-addresses and enabling HTTPS on our server. Additionally a section will be made dedicate to future developer of aSTEP, to make it easier to get up to speed.
 
 \input{4sprint/catch_up}
 \input{4sprint/our_server}
