--- a/4sprint/our_system.tex
+++ b/4sprint/our_system.tex
@@ -1,7 +1,11 @@
 \section{The Future of Our Tracking System}\label{sec:futureSystem}
-As described in \cref{sec:ourSys} we have been working on building our own tracking system, we did however not finish this due to a number of difficulties. The main obstacle we encountered was not being able to get the RSSI, and thus not making it possible for us to further progress on our ow system.
+As described in \cref{sec:ourSys} we have been working on building our own tracking system, we did however not finish this due to a number of difficulties. The main obstacle we encountered was not being able to get the RSSI, and thus not making it possible for us to make further progress on our system.
+
 \subsection*{Signal Strength}
-The first step in future development should be to become able to get the RSSI from at least devises connected to the network.
+The first step in future development should be to become able to get the RSSI from at least devises connected to the network. Thereafter the data from multiple access points should be received which leads to the next step. Following this there should be put in an effort to calculate a distance away form each access point based on the signal strength and to utilize one of the methods for calculating the position of devices, as described in \cref{sec:tracking_approach}. By making these features it would be possible to locate devices on the network, which we believe would be a large part of making the full system.
+
+Having the described features would make a usable locations system, that however does not mean there is no more to be done on the system. Additionally the system could be expanded to receive the signal strength for all devices within the networks perimeter, connected or not. This would allow for the system to track everyone within the systems coverage and thereby giving it a more accurate coverage of the area of usage.
+Also there could be looked into calculating the accuracy of each location, as Cisco does it. What Cisco does is that it gives some radius in feet with a confidence factor of $95\%$, meaning it is $95\%$ sustain the device is within the given radius\cite{cisco_acc}. 
 
 \subsection*{Problems}
 some other problems we have had
