--- a/4sprint/our_system.tex
+++ b/4sprint/our_system.tex
@@ -8,4 +8,4 @@ Having the described features would make a usable locations system, that however
 Also there could be looked into calculating the accuracy of each location, as Cisco does it. What Cisco does is that it gives some radius in feet with a confidence factor of $95\%$, meaning it is $95\%$ sustain the device is within the given radius\cite{cisco_acc}. 
 
 \subsection*{Problems}
-some other problems we have had
+As mentioned the main problem in making our own tracking system was that we could not get the RSSI from the devices, but other problems occurred. \ofx{Team Jacob?}
