New collab document aout the Location class

--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -19,3 +19,4 @@ This means we need to make at least two collaborations with other aSTEP groups.
 
 \input{collaboration/aSTEP_meetings}
 \input{collaboration/gitlab}
+\input{collaboration/shared_classes}
